--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p>
             &copy; 2024 by
             <a href="#" target="_blank">
-                <span>MrMadaraUchiha_</span>
+                <span>MrMadaraGames</span>
             </a>
         </p>
     </footer>
